# fasthtml_todo

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  messages.json  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  flake.nix
.github/: FUNDING.yml  copilot-instructions.md
.prompts/: README.org  code-review.prompt  code-smells.prompt  comment.prompt
fasthtml_todo/: _modidx.py
nbs/: index.ipynb  nbdev.yml
sandbox/: playground.ipynb  scratchpad.py
