[tool.poetry]
name = "fasthtml-todo"
version = "0.1.0"
description = "todo app with fasthtml"
authors = ["Rohit Nair <6954311+rnair98@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12,<3.13"
python-fasthtml = "^0.9.0"
fastsql = "^2.0.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
pre-commit = "^4.0.1"
nbdev = "^2.3.31"
jupyterlab = "^4.3.0"
jupyterlab-quarto = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
